# openclaw

./: .gitignore  .wsl-npm-fix.sh  CLAUDE.md  PRODUCTION_READINESS_REPORT.md  SETUP.bat  SETUP.ps1  package-lock.json
.a0proj/: project.json
.a0proj/instructions/: 00_GOD_MODE_DIRECTIVE.md
.a0proj/knowledge/: 01_ARCHITECTURE.md
.a0proj/skills/: openclaw_status.py
.agent/workflows/: spline-api.md
.claude/: settings.json  settings.local.json
.claude/modes/: README.md
.cursor/commands/: ui-ux-pro-max.md
.cursor/rules/: the-layered-.mdc
.github/next-infastructure-scrapers/: package-lock.json  package.json
.github/workflows/: deploy.yml
context/: monetization_strategy.md  slack-setup.md
data/: memory.db.bak
goals/: manifest.md  monetize.md  oneshot_frontend.md  slack_notify.md
landing/voxcode/: index.html  intro.html
memory/: MEMORY.md
memory/logs/: 2026-02-03.md  2026-02-04.md
next-infastructure-scrapers/: README.md  SETUP.md  next.config.js  next.config.ts  package-lock.json  package.json  server.js
next-infastructure-scrapers/app/: globals.css  layout.tsx  page.tsx
next-infastructure-scrapers/electron/: main.js  preload.js
next-infastructure-scrapers/public/: manifest.webmanifest  sw.js
next-infastructure-scrapers/scripts/: setup-hostinger.sh
tools/: check_vps.py  deploy_hostinger.py  deploy_vps.py  diagnose_vps.py  fix_vps.py  manifest.md  setup_vps.py  start_vps.py  upload_build.py
tools/core/: env.py  (+1 more)
voxcode/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  pyproject.toml  start-voxcode.bat
voxcode/.github/workflows/: ci.yml  publish.yml  release.yml
voxcode/configs/: default.yaml
voxcode/scripts/: install.py  setup_ollama.py
voxcode/src/voxcode/: __init__.py  __main__.py  cli.py
voxcode/src/voxcode/ai/: __init__.py  assistant.py  prompts.py  providers.py
voxcode/src/voxcode/commands/: __init__.py  parser.py  registry.py
voxcode/src/voxcode/core/: __init__.py  config.py  engine.py  events.py
voxcode/src/voxcode/ide/: __init__.py  jetbrains.py  manager.py  neovim.py  system.py  vscode.py
voxcode/src/voxcode/intelligence/: __init__.py  analyzer.py  context.py
voxcode/src/voxcode/ui/: __init__.py  hotkeys.py  live.py  tray.py
voxcode/src/voxcode/voice/: __init__.py  languages.py  recorder.py  session.py  transcriber.py  tts.py  vad.py
(+169 files in other folders)
